--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moto & Ride</title>
-    <link rel="icon" type="image/png" href="../images/logos/2-removebg-preview.png">
-    <link rel="stylesheet" href="../moto ride.css">
+    <link rel="icon" type="image/png" href="images/logos/2-removebg-preview.png">
+    <link rel="stylesheet" href="moto ride.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../fonts/fontawesome/css/all.css">
+    <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="waves">
@@ -22,7 +22,7 @@
             <input id="welcome_animation_input" class="welcome_animation_input" type="text" placeholder="Welcome to our store">
             </form>
             </div>
-            <img class="logo" src="../images/logos/logo preview.png" width="106px" height="60px">
+            <img class="logo" src="images/logos/logo preview.png" width="106px" height="60px">
             <p class="logo_text1">Moto <span class="logo_text_span"> & Ride</span></p>
         </div>
 
@@ -31,10 +31,10 @@
                 <div class="right_nav_block_ul_icon">
                     <ul class="ul_nav">
                     <li class="li_nav"><a href="index.html" class="a_nav">Home</a></li>
-                    <li class="li_nav"><a href="../contact/contact.html" class="a_nav">Contact</a></li>
-                    <li class="li_nav"><a href="../log in/log in.html" class="a_nav">Log in</a></li>
-                    <li class="li_nav"><a href="../wishlist/wishlist.html" class="a_nav">Wishlist</a></li>
-                    <li class="li_nav"><a href="../cart/cart.html" class="a_nav">Cart</a></li>
+                    <li class="li_nav"><a href="contact/contact.html" class="a_nav">Contact</a></li>
+                    <li class="li_nav"><a href="log in/log in.html" class="a_nav">Log in</a></li>
+                    <li class="li_nav"><a href="wishlist/wishlist.html" class="a_nav">Wishlist</a></li>
+                    <li class="li_nav"><a href="cart/cart.html" class="a_nav">Cart</a></li>
                     </ul>
                     <i class="fa-solid fa-bars"></i>
                 </div>
@@ -49,10 +49,10 @@
                 <div class="image_slider_box">
                     <div class="slider_wrapper">
                         <div class="slider">
-                            <img class="image_slider_box_images_1" id="slide_1" src="../images/images slader/sss.png">
+                            <img class="image_slider_box_images_1" id="slide_1" src="images/images slader/sss.png">
                             <h2>Bold, beautiful, and dangerously fast - <span>just the way you like it</span></h2>
-                            <img class="image_slider_box_images_2" id="slide_2" src="../images/images slader/AdobeStock_593542805.jpg">
-                            <img class="image_slider_box_images_3" id="slide_3" src="../images/images slader/man-is-riding.png">
+                            <img class="image_slider_box_images_2" id="slide_2" src="images/images slader/AdobeStock_593542805.jpg">
+                            <img class="image_slider_box_images_3" id="slide_3" src="images/images slader/man-is-riding.png">
                         </div>
 
                         <div class="slider_nav">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="back_1">
                     <p class="catalogs_box_text">Your riding journey starts here! We offer a wide selection of motorcycles from top global brands, ranging from high-speed sport bikes to comfortable cruisers. Each motorcycle is carefully chosen to provide the perfect blend of power, performance, and design.</p>
-                    <a href="../motorcycle catalog/motorcycles.html" class="catalog_link_1"><button class="catalog_button">See More</button></a>
+                    <a href="motorcycle catalog/motorcycles.html" class="catalog_link_1"><button class="catalog_button">See More</button></a>
                 </div>
                 </div>
             </div>
@@ -177,11 +177,11 @@
                     <div class="box"><p>Moto & Ride 🏍️</p></div>
                     <div class="product_box">
                         <div class="product_img_box">
-                            <img src="../images/product/kawasaki product/h2 sx.png" class="product_img">
+                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
                         </div>
 
                         <div class="product_logo_box">
-                            <img src="../images/product logos/kawasaki logo.png" class="product_logo_img">
+                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
                             <div>
                                 <i class="fa-solid fa-heart add_to_wishlist"></i>
                                 <i class="fa-solid fa-cart-shopping add_to_cart"></i>
@@ -205,7 +205,7 @@
                                     </div>
                                 <h2>26,678.22 $</h2>
                                 </div>
-                                <button class="button"><a href="../products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
+                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
                             </article>
                         </div>
                         <div class="new_popular"></div>
@@ -217,11 +217,11 @@
                     <div class="box"><p>Moto & Ride 🏍️</p></div>
                     <div class="product_box">
                         <div class="product_img_box">
-                            <img src="../images/product/kawasaki product/h2 sx.png" class="product_img">
+                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
                         </div>
 
                         <div class="product_logo_box">
-                            <img src="../images/product logos/kawasaki logo.png" class="product_logo_img">
+                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
                             <div>
                                 <i class="fa-solid fa-heart add_to_wishlist"></i>
                                 <i class="fa-solid fa-cart-shopping add_to_cart"></i>
@@ -245,7 +245,7 @@
                                     </div>
                                 <h2>26,678.22 $</h2>
                                 </div>
-                                <button class="button"><a href="../products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
+                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
                             </article>
                         </div>
                         <div class="new_popular"></div>
@@ -257,11 +257,11 @@
                     <div class="box"><p>Moto & Ride 🏍️</p></div>
                     <div class="product_box">
                         <div class="product_img_box">
-                            <img src="../images/product/kawasaki product/h2 sx.png" class="product_img">
+                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
                         </div>
 
                         <div class="product_logo_box">
-                            <img src="../images/product logos/kawasaki logo.png" class="product_logo_img">
+                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
                             <div>
                                 <i class="fa-solid fa-heart add_to_wishlist"></i>
                                 <i class="fa-solid fa-cart-shopping add_to_cart"></i>
@@ -285,7 +285,7 @@
                                     </div>
                                 <h2>26,678.22 $</h2>
                                 </div>
-                                <button class="button"><a href="../products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
+                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
                             </article>
                         </div>
                         <div class="new_popular"></div>
@@ -297,11 +297,11 @@
                     <div class="box"><p>Moto & Ride 🏍️</p></div>
                     <div class="product_box">
                         <div class="product_img_box">
-                            <img src="../images/product/kawasaki product/h2 sx.png" class="product_img">
+                            <img src="images/product/kawasaki product/h2 sx.png" class="product_img">
                         </div>
 
                         <div class="product_logo_box">
-                            <img src="../images/product logos/kawasaki logo.png" class="product_logo_img">
+                            <img src="images/product logos/kawasaki logo.png" class="product_logo_img">
                             <div>
                                 <i class="fa-solid fa-heart add_to_wishlist"></i>
                                 <i class="fa-solid fa-cart-shopping add_to_cart"></i>
@@ -325,7 +325,7 @@
                                     </div>
                                 <h2>26,678.22 $</h2>
                                 </div>
-                                <button class="button"><a href="../products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
+                                <button class="button"><a href="products/product page.html" class="a_button"><i class="fa-solid fa-bag-shopping"></i></a></button>
                             </article>
                         </div>
                         <div class="new_popular"></div>
@@ -339,16 +339,16 @@
         <section class="subcategory_super_box">
             <div class="subcategory_wrapper_box">
                 <div class="subcategory_3d_box">
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
-                    <div class="subcategory"><img src="../images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
+                    <div class="subcategory"><img src="images/categories/motorcycle catalog.jpg" alt=""><a href="#" class="subcategory_button">See more</a></div>
                 </div>
             </div>
 
@@ -430,6 +430,6 @@
             </div>
         </div>
     </footer>
-    <script src="../moto ride.js"></script>
+    <script src="moto ride.js"></script>
 </body>
 </html>
