--- a/cart/cart.html
+++ b/cart/cart.html
@@ -26,7 +26,7 @@
                 <p class="logo_text2">Moto <span class="logo_text_span"> & Ride</span></p>
                 <div class="right_nav_block_ul_icon">
                     <ul class="ul_nav">
-                    <li class="li_nav"><a href="../home/index.html" class="a_nav">Home</a></li>
+                    <li class="li_nav"><a href="../index.html" class="a_nav">Home</a></li>
                     <li class="li_nav"><a href="../contact/contact.html" class="a_nav">Contact</a></li>
                     <li class="li_nav"><a href="../log in/log in.html" class="a_nav">Log in</a></li>
                     <li class="li_nav"><a href="../wishlist/wishlist.html" class="a_nav">Wishlist</a></li>
