--- a/motorcycle catalog/motorcycles.html
+++ b/motorcycle catalog/motorcycles.html
@@ -26,7 +26,7 @@
                 <p class="logo_text2">Moto <span class="logo_text_span"> & Ride</span></p>
                 <div class="right_nav_block_ul_icon">
                     <ul class="ul_nav">
-                    <li class="li_nav"><a href="../home/index.html" class="a_nav">Home</a></li>
+                    <li class="li_nav"><a href="../index.html" class="a_nav">Home</a></li>
                     <li class="li_nav"><a href="../contact/contact.html" class="a_nav">Contact</a></li>
                     <li class="li_nav"><a href="../log in/log in.html" class="a_nav">Log in</a></li>
                     <li class="li_nav"><a href="../wishlist/wishlist.html" class="a_nav">Wishlist</a></li>
@@ -263,7 +263,7 @@
                         <div class="box"><p>Moto & Ride 🏍️</p></div>
                         <div class="product_box">
                             <div class="product_img_box">
-                                <img src="../images/product/harley davidson/olive gold glide.png" class="product_img">
+                                <img src="../images/product/harley davidson/Olive gold glide.png" class="product_img">
                             </div>
 
                             <div class="product_logo_box">
