--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exile&display=swap" rel="stylesheet">
 </head>
 <body class="waves">
     <header>
@@ -43,6 +46,97 @@
     </header>
     
     <main>
+        <section class="navigation_menu navigation_menu_close_click">
+            <div class="headline_section">
+                <h2>Navigation menu</h2>
+                <p class="navigation_menu_close_button">Close</p>
+            </div>
+
+            <a href="index.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-house house_icon_menue"></i>
+                    <h4>Home</h4>
+                </div>
+            </a>
+
+            <a class="search_menu_link" href="#welcome_animation_input">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <h4>Advanced Search</h4>
+                </div>
+            </a>
+
+            <a href="contact/contact.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-comments"></i>
+                    <h4>Contact With Our Team</h4>  
+                </div>
+            </a>
+
+            <a href="log in/log in.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                    <h4>Log In / Sign In</h4>
+                </div>
+            </a>
+
+            <a href="wishlist/wishlist.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-heart"></i>
+                    <h4>My Wishlist</h4>
+                </div>
+            </a>
+
+            <a href="cart/cart.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <h4>View Shopping Cart</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-address-card"></i>
+                    <h4>About Us</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-newspaper"></i>
+                    <h4>Blog / Article And News</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-compass"></i>
+                    <h4>Test Ride Booking</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-circle-question"></i>
+                    <h4>Frequently Asked Questions</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-coins"></i>
+                    <h4>Financing Options</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-check"></i>
+                    <h4>Customer Reviews</h4>
+                </div>
+            </a>
+        </section>
+
         <section class="header_img_super_box">
             <div class="header_img_box">
 
