--- a/log in/log in.html
+++ b/log in/log in.html
@@ -42,6 +42,97 @@
     </header>
 
     <main>
+        <section class="navigation_menu navigation_menu_close_click">
+            <div class="headline_section">
+                <h2>Navigation menu</h2>
+                <p class="navigation_menu_close_button">Close</p>
+            </div>
+
+            <a href="../index.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-house house_icon_menue"></i>
+                    <h4>Home</h4>
+                </div>
+            </a>
+
+            <a class="search_menu_link" href="#welcome_animation_input">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <h4>Advanced Search</h4>
+                </div>
+            </a>
+
+            <a href="../contact/contact.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-comments"></i>
+                    <h4>Contact With Our Team</h4>  
+                </div>
+            </a>
+
+            <a href="log in.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                    <h4>Log In / Sign In</h4>
+                </div>
+            </a>
+
+            <a href="../wishlist/wishlist.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-heart"></i>
+                    <h4>My Wishlist</h4>
+                </div>
+            </a>
+
+            <a href="../cart/cart.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <h4>View Shopping Cart</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-address-card"></i>
+                    <h4>About Us</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-newspaper"></i>
+                    <h4>Blog / Article And News</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-compass"></i>
+                    <h4>Test Ride Booking</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-circle-question"></i>
+                    <h4>Frequently Asked Questions</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-coins"></i>
+                    <h4>Financing Options</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-check"></i>
+                    <h4>Customer Reviews</h4>
+                </div>
+            </a>
+        </section>
+
         <section class="log_in_box_wallpaper">
             <div class="log_in_glass_box">
                 <div class="log_in_box">
