--- a/motorcycle catalog/motorcycles.html
+++ b/motorcycle catalog/motorcycles.html
@@ -39,6 +39,97 @@
     </header>
 
     <main>
+        <section class="navigation_menu navigation_menu_close_click">
+            <div class="headline_section">
+                <h2>Navigation menu</h2>
+                <p class="navigation_menu_close_button">Close</p>
+            </div>
+
+            <a href="../index.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-house house_icon_menue"></i>
+                    <h4>Home</h4>
+                </div>
+            </a>
+
+            <a class="search_menu_link" href="#welcome_animation_input">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <h4>Advanced Search</h4>
+                </div>
+            </a>
+
+            <a href="../contact/contact.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-comments"></i>
+                    <h4>Contact With Our Team</h4>  
+                </div>
+            </a>
+
+            <a href="../log in/log in.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                    <h4>Log In / Sign In</h4>
+                </div>
+            </a>
+
+            <a href="../wishlist/wishlist.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-heart"></i>
+                    <h4>My Wishlist</h4>
+                </div>
+            </a>
+
+            <a href="../cart/cart.html">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <h4>View Shopping Cart</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-address-card"></i>
+                    <h4>About Us</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-newspaper"></i>
+                    <h4>Blog / Article And News</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-compass"></i>
+                    <h4>Test Ride Booking</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-circle-question"></i>
+                    <h4>Frequently Asked Questions</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-coins"></i>
+                    <h4>Financing Options</h4>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="top_navigation_menu_section">
+                    <i class="fa-solid fa-check"></i>
+                    <h4>Customer Reviews</h4>
+                </div>
+            </a>
+        </section>
+
         <section class="display-flex margin-0">
             <section class="filter_sidebar display-flex justifyContent-center color-white margin-0">
                 <form action="motorcycles.html" method="get" class="display-flex flexDirection-column">
@@ -643,5 +734,6 @@
             </div>
         </div>
     </footer>
+    <script src="../moto ride.js"></script>
 </body>
 </html>
