Fix: broken link in cart page

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -80,7 +80,7 @@
                 </div>
             </a>
 
-            <a href="../cart.html">
+            <a href="cart.html">
                 <div class="top_navigation_menu_section">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <h4>View Shopping Cart</h4>
